@@ -1,6 +1,12 @@
 2008-05-06  Benjamin Berg  <benjamin@sipsolutions.net>
 
 	* engines/clearlooks/src/clearlooks_style.c:
+	(clearlooks_style_realize):
+	Comment out two broken and unneded lines.
+
+2008-05-06  Benjamin Berg  <benjamin@sipsolutions.net>
+
+	* engines/clearlooks/src/clearlooks_style.c:
 	(clearlooks_style_draw_box):
 	Only decrease the size of the scrollbar trough if the
 	trough-under-steppers style property is set and steppers are present.
